k8s/admin/app/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: library
spec:
  ingressClassName: nginx
  rules:
    - host: admin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-admin
                port:
                  name: http
